--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "dayjs": "^1.11.1"
+    "chart.js": "^3.7.1",
+    "dayjs": "^1.11.1",
+    "vue-chart-3": "^3.1.8"
   }
 }
