--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
-    "nuxt": "3.0.0-rc.1"
+    "nuxt": "3.0.0-rc.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
